OSGI-762 + improved configuration admin update handling by supporting both container and bean management on the same declaration + renamed schemas to -m2.xsd + changed spring-osgi-compendium schema
git-svn-id: https://src.springframework.org/svn/spring-osgi/trunk@2415 2e8e966d-6415-0410-94b9-dc4e65435d03